@@ -1,5 +1,10 @@
 2006-11-13  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/cipher.c (HAVE_OPENSSL:_cipher_map_enum): Fixed compiler
+	  warning "assignment discards qualifiers from pointer target type".
+	* src/munged/md.c (HAVE_OPENSSL:_md_map_enum): Fixed compiler warning
+	  "assignment discards qualifiers from pointer target type".
+
 	* src/munged/mac.c, src/munged/mac.h:
 	  Renamed struct mac_ctx len var to diglen.
 	* src/munged/md.c, src/munged/md.h:
